# changeDetection-Aegis-News

./: README.txt
changedetect/: main.py  pyproject.toml
scrap-graph/: config.py  pyproject.toml  utils.py  worker.py
webapi/: app.py  pyproject.toml
