[project]
name = "aegis-scraper"
version = "0.1.0"
dependencies = [
    "scrapegraphai>=1.69.0",
    "langchain>=0.3.0",
    "langchain-aws",
    "playwright",
    "fastapi",
    "uvicorn",
    "langchain-core>=1.2.4",
    "langchain-community>=0.4.1",
    "nest-asyncio>=1.6.0",
]
requires-python = ">=3.11"
